Fix garbled USB device properties

Issue:
When connecting to a USB device with some properties (e.g. product, description, ID_MODEL, ID_SERIAL) containing non-ASCII characters, Solid displays garbled properties.

Change:
Switch from Latin-1 decoding to UTF-8 decoding when reading device properties.

BUG: 505913